<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <EditText
        android:id="@+id/idTextUpdate"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:hint="@string/text_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nameTextUpdate"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:hint="@string/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextUpdate"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailTextUpdate"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:hint="@string/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextUpdate"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/yearTextUpdate"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/text_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextUpdate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_updateUpdate"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#08C822"
        android:text="@string/button_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearTextUpdate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_backUpdate"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="#08C822"
        android:text="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_updateUpdate"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>