<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteActivity">

    <EditText
        android:id="@+id/idTextDelete"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:hint="@string/text_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button_deleteDelete"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="#08C822"
        android:text="@string/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextDelete"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_backDelete"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="#08C822"
        android:text="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_deleteDelete"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_viewDelete"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:background="#08C8C2"
        android:text="@string/button_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_backDelete"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>